# Vec3

./: App.axaml  App.axaml.fs  BNF  Directory.Build.props  Draw.axaml  Draw.axaml.fs  MainWindow.axaml  MainWindow.axaml.fs  Notebook.axaml  Notebook.axaml.fs  NotebookPDFExport.fs  PlotWindow.axaml  PlotWindow.axaml.fs  Presentation.md  Program.fs  README.md  Styles.axaml  SyntaxWindow.axaml.fs  SytaxWindow.axaml  Vec3.fsproj  Vec3.sln  app.manifest  interpreter.vec3  test.vec3
.fsdocs/: cache
Executable/: CMakeLists.txt
Executable/include/: env.h  number.h  value.h  vec3_list.h  vec3_math.h
Executable/src/: env.c  hashmap.c  main.c  value.c  vec3_list.c  vec3_math.c
Interpreter/: ConstantFolding.fs  DCE.fs  Eval.fs  Grammar.fs  Parser.fs  Parser2.fs  Prelude.fs  Preprocessor.fs  PrettyPrinter.fs  Printer.fs  Repl.fs  Scanner.fs  SymbolicExpression.fs  Token.fs  TypeChecker.fs
Interpreter/Backend/: Builtins.fs  Chunk.fs  Compiler.fs  Instructions.fs  Types.fs  VM.fs  Value.fs
Interpreter/Typing/: Builtins.fs  Checker.fs  Exceptions.fs  Generalisation.fs  Inference.fs  Substitution.fs  Types.fs
Tests/: Parser.fs  Program.fs  Scanner.fs  SymbolicExpression.fs  Tests.fsproj  Token.fs
Tests/Backend/: Compiler.fs  VM.fs  Value.fs
Tests/Optimisation/: ConstantFolding.fs  DCE.fs
Tests/SyntaxAnalysis/: Parser.fs  Scanner.fs  Token.fs
Tests/TypeAnalysis/: Inference.fs
Transpiler/: CodeGenerator.fs  Transpiler.fs
Vec3/: Program.fs  Vec3.fsproj
Vec3/Executable/: CMakeLists.txt
Vec3/GUI/: App.axaml  (+9 more)
grammar/: vec3.tmLanguage.json
output/: index.html
report/: AP_REPORT_02.aux  AP_REPORT_02.bbl  AP_REPORT_02.blg  AP_REPORT_02.out  AP_REPORT_02.pyg  AP_REPORT_02.tex  References.bib  development-history.tex  final-bnf.tex  final-deliverable.tex  initial-design-of-the-bytecode-virtual-machine-and-compiler.tex  notable-features.tex  testing.tex  type-inference.tex
untitled/: CMakeLists.txt  main.c  value.c  value.h  vec3_list.c
untitled1/: CMakeLists.txt
untitled1/include/: hashmap.h  value.h
untitled1/src/: env.c  main.c  value.c
untitled2/: CMakeLists.txt
(+179 files in other folders)
